--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<div class="container">
 			<section class="services container__services">
 				<h1 class="services__title">Услуги и сервисы</h1>
-				<ul class="services-block services-block_sizes">
+				<ul class="services-block">
 					<li class="services-block__item"><a class="services-block__link" href="#">Ремонтируемые бренды</a></li>
 					<li class="services-block__item"><a class="services-block__link" href="#">Ремонтируемые устройства</a> </li>   
 					<li class="services-block__item"><a class="services-block__link" href="#">Цены на услуги</a></li>
@@ -56,24 +56,19 @@
 					<li class="services-block__item"><a class="services-block__link" href="#">Отзывы</a></li>  
 				</ul>
 			</section>
-			<section class="description">
-				<div class="description-block container__description">
-					
-					<div class="services-block__description"> 
-						<input type="checkbox" name="text-open" id="text-open" class="services-block__checkbox">
-						<p class="services-block__text">Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.</p>
-						<p class="services-block__text">Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера<span class="services-block__hide">, что подтверждает большое количество постоянных клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.</span></p>
-						<label class="services-block__label" for="text-open"></label>
+			<section class="description container__description">
+				<div class="description-block description-block_idents"> 
+					<p class="description-block__text">Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.</p>
+					<p class="description-block__text">Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера<span class="description-block__hide">, что подтверждает большое количество постоянных клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.</span></p>
+					<div class="description-block__button">
+						<button class="description-block__btn">Читать далее</button>
 					</div>
 				</div>
-				<div class="description-block__picture">
+				<div class="description-picture">
 					<img class="description-block__img" src="./img/1096/img.png" alt="img logo">
 				</div>
 			</section>
-
 		</div>
 	</main>
-
-	<script src="script.js"></script>
 </body>
 </html>
