--- a/index.html
+++ b/index.html
@@ -20,17 +20,18 @@
 				</div>
 			</div>
 			<div class="service">
-				<div class="service__block">
+				<div class="service__links">
 					<a href="#" class="service__link">
 						<img src="./img/320/call.svg" alt="service" class="service__call">
-					</a><a href="#" class="service__link">
+					</a>
+					<a href="#" class="service__link">
 						<img src="./img/320/chat.svg" alt="service" class="service__chat">
-					</a><a href="#" class="service__link service__link--border--after">
+					</a>
+					<a href="#" class="service__link service__link--border--after">
 						<img src="./img/320/profile.svg" alt="service" class="service__profile">
 					</a>
 					<a href="#" class="service__description">Оставить заявку</a>
 					<a href="#" class="service__link">
-						<div class="service__before"></div>
 						<img src="./img/320/repair.svg" alt="service" class="service__service">
 					</a>
 					<a href="#" class="service__description">Статус ремонта</a>
